--- a/public/style.css
+++ b/public/style.css
@@ -1,31 +1,5 @@
-/* utilities */
-@import url("https://fonts.googleapis.com/css2?family=Dongle&display=swap");
-.flex-column {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.flex-center {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.justify-center {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 /* Button styling */
+@import url("https://fonts.googleapis.com/css2?family=Dongle&display=swap");
 .btn {
   font-size: 2rem;
   font-weight: 700;
@@ -84,53 +58,54 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  min-height: 100vh;
+  min-height: 800px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow-y: auto;
+}
+
+.centered {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  border-radius: 10px;
+  background-color: rgba(236, 169, 22, 0.8);
+  border: 2px solid #eca916;
+  padding: 20px 1rem;
+  max-width: 800px;
+  width: 80%;
+  min-height: 70%;
+  max-height: 98vh;
+  -webkit-box-shadow: 0px 0px 10px 0px #f7f6f4;
+          box-shadow: 0px 0px 10px 0px #f7f6f4;
+  margin: 0 auto;
 }
 
 h1 {
   font-size: 3rem;
   color: #000000;
-  height: 100px;
-  line-height: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  line-height: 33px;
 }
 
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  text-align: center;
-  border: 3px solid white;
-  border-radius: 10px;
-  width: 50vw;
-  min-height: 70vh;
-}
-
-.dashboard {
-  background-color: rgba(236, 169, 22, 0.8);
-  border: 2px solid #eca916;
-  border-radius: 2%;
-  padding: 2rem 1rem;
-  width: 60%;
-  min-height: 70%;
-  max-height: 95vh;
-  -webkit-box-shadow: 0px 0px 10px 0px #f7f6f4;
-          box-shadow: 0px 0px 10px 0px #f7f6f4;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.dashboard img {
+.centered img {
   margin: auto;
   -o-object-fit: cover;
      object-fit: cover;
@@ -139,6 +114,7 @@ h1 {
 }
 
 .img-container {
+  margin: auto;
   display: inline-block;
   max-width: 260px;
   max-height: 260px;
@@ -154,6 +130,10 @@ hr {
   height: 7px;
   background-color: rgba(166, 5, 5, 0.8);
   border-radius: 20px;
+}
+
+#user-interface {
+  min-height: 680px;
 }
 
 #welcome-interface {
@@ -244,13 +224,24 @@ hr {
           flex-direction: column;
   height: 100%;
   width: 80%;
-  gap: 30px;
-  margin: 1rem;
+  gap: 10px;
+  margin: 0 1rem;
 }
 
 #question-interface h1 {
   width: 100%;
   margin: auto;
+  font-size: 2.5rem;
+  min-height: 66px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 #question-interface .btn {
@@ -269,7 +260,7 @@ hr {
 }
 
 .error {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   color: #a60505;
   -webkit-transition: -webkit-transform 2s;
   transition: -webkit-transform 2s;
@@ -278,6 +269,7 @@ hr {
   margin-top: 20px;
   -webkit-animation: errorMove 1s infinite linear alternate;
           animation: errorMove 1s infinite linear alternate;
+  max-width: 400px;
 }
 
 #answers-list {
@@ -291,7 +283,7 @@ hr {
 .answer-item {
   border: 1px solid black;
   font-size: 2rem;
-  margin: 1rem 0;
+  margin: 10px 0;
   padding: 0 1rem;
   cursor: pointer;
   min-width: 400px;
@@ -336,7 +328,9 @@ hr {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-top: 0.5rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .hud-prefix {
@@ -347,20 +341,20 @@ hr {
 
 .hud-main-text {
   text-align: center;
-  font-size: 2.2rem;
-  font-weight: 600;
+  font-size: 2rem;
+  font-weight: 800;
 }
 
 #hud-item {
   width: 100px;
   border-radius: 10px;
-  background-color: rgba(166, 5, 5, 0.5);
-  height: 90px;
+  background-color: rgba(166, 5, 5, 0.4);
+  height: 80px;
 }
 
 #hud img {
   width: 100px;
-  height: 100px;
+  height: 86px;
   margin: 0;
   -webkit-animation: pictureMove 4s infinite linear alternate;
           animation: pictureMove 4s infinite linear alternate;
@@ -514,13 +508,12 @@ ol li {
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
   body {
     background-repeat: repeat;
-    background-size: 100% 100%;
   }
   #user-interface {
-    height: 100vh;
+    height: auto;
   }
   #question-interface {
     width: 100%;
@@ -579,8 +572,70 @@ ol li {
   }
 }
 
-@media screen and (max-height: 864px) {
+@media (max-width: 575px) {
+  #user-interface {
+    margin: 80px 0;
+    min-height: 850px;
+  }
+  #welcome-interface {
+    height: 100%;
+    width: 100%;
+  }
+  #welcome-interface > div {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .instruction {
+    width: 300px;
+    -ms-flex-preferred-size: 200px;
+        flex-basis: 200px;
+  }
+  #welcome-interface > div li {
+    margin: 10px auto;
+    height: auto;
+    width: 300px;
+    list-style: none;
+  }
+}
+
+@media (max-width: 430px) {
+  body {
+    height: auto;
+  }
+  #welcome-interface > div li {
+    width: 80%;
+  }
+  #welcome-interface hr {
+    max-width: 80%;
+    margin: auto;
+  }
   #question-interface {
     gap: 0;
+    height: auto;
+  }
+  #question-interface .hud-prefix {
+    font-size: 1rem;
+  }
+  #question-interface h1 {
+    font-size: 1.7rem;
+    margin-top: 10px;
+  }
+  #question-interface #answers-list {
+    min-height: 200px;
+    width: auto;
+  }
+  #question-interface #answers-list li {
+    min-width: 200px;
+  }
+  #question-interface li {
+    line-height: 1.3rem;
+  }
+  .btn {
+    padding: 5px 10px;
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
   }
 }
