--- a/sass/style.scss
+++ b/sass/style.scss
@@ -74,6 +74,7 @@ hr {
 }
 #user-interface {
   min-height: 680px;
+  animation: pageTransition 1s ease-out alternate;
 }
 
 #welcome-interface {
@@ -85,6 +86,7 @@ hr {
   text-align: center;
   min-height: 70vh;
   gap: 10px;
+  animation: pageTransition 1s ease-out alternate;
   h1 {
     font-size: 4rem;
     line-height: 3rem;
@@ -140,6 +142,7 @@ hr {
   width: 80%;
   gap: 10px;
   margin:0 1rem;
+  animation: pageTransition 1s ease-out alternate;
 
   h1 {
     width: 100%;
@@ -182,6 +185,9 @@ hr {
   cursor: pointer;
   min-width: 400px;
   border-radius: 10px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .btn:hover,
@@ -274,6 +280,7 @@ ol {
 
 
 #result-interface {
+  animation: pageTransition 1s ease-out alternate;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -288,9 +295,9 @@ ol {
     font-style: italic;
    
   }
-  span {
-    font-weight: 800;
-    color: rgba(166, 5, 5, 0.9);
+  b {
+    font-size:1.95rem;
+    color: darkred;
   }
   a {
     font-size: 1.5rem;
@@ -325,6 +332,17 @@ ol {
 
   100% {
     transform: translateY(1.25);
+  }
+}
+
+@keyframes pageTransition {
+  0% {
+     opacity: 0;
+
+  }
+
+  100% {
+    transform: 1;
   }
 }
 
@@ -430,14 +448,29 @@ ol {
     width:80%
   }
   #welcome-interface {
+    
     hr {
       max-width: 80%;
       margin: auto;
     }
+    img {
+      
+      margin-top:70px;
+      width:170px;
+    }
+    .btn{
+      margin-top:1rem;
+    }
   }
   #question-interface {
-    gap:0;
+    gap:10px;
     height: auto;
+    #hud-item:last-child {
+      line-height: 1.2rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+    }
 
     .hud-prefix {
       font-size: 1rem;
@@ -448,21 +481,28 @@ ol {
     }
    
     #answers-list {
-      min-height: 200px;
+      min-height: 344px;
       width:auto;
       li {
-        min-width:200px;
+        min-width:240px;
       }
     }
    
     li {
       line-height: 1.3rem;
+      text-align: center;
+      
       
     }
   }
   .btn {
     padding:5px 10px;
     width:max-content;
+    align-self: center;
+  }
+  #question-interface ol {
+    display: flex;
+    flex-direction: column;
   }
 
 
